--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <form id="form">
             <b>Accès restreint au wifi</b>
-            <p>En vous connectant à ce service vous acceptez nos <a href="cgu.html">conditions générales d'utilisation application</a></p>
+            <p>En vous connectant à ce service vous acceptez nos <a href="cgu.html">conditions générales d'utilisation</a></p>
             <input type="text" id="email" name="email" placeholder="Votre email">
             <button type="submit" id="submit">Se connecter</button>
         </form>
